--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,11 @@
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
+        "laravel/socialite": "^5.15",
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.5",
         "razorpay/razorpay": "2.*",
+        "spatie/enum": "^3.13",
         "spatie/laravel-medialibrary": "^10.15",
         "spatie/laravel-permission": "^6.3",
         "spatie/laravel-query-builder": "^5.7"
