--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "razorpay/razorpay": "2.*",
         "spatie/laravel-medialibrary": "^10.15",
         "spatie/laravel-permission": "^6.3",
-        "spatie/laravel-query-builder": "^5.7"
+        "spatie/laravel-query-builder": "^5.7",
+        "yajra/laravel-datatables-oracle": "^10.11"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
