--- a/composer.json
+++ b/composer.json
@@ -13,15 +13,19 @@
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.5",
+        "league/flysystem": "^3.28",
+        "league/flysystem-local": "^3.28",
         "razorpay/razorpay": "2.*",
+        "spatie/enum": "^3.13",
+        "spatie/laravel-data": "^4.7",
         "spatie/laravel-medialibrary": "^10.15",
         "spatie/laravel-permission": "^6.3",
         "spatie/laravel-query-builder": "^5.7",
+        "spatie/schema-org": "^3.23",
         "yajra/laravel-datatables-oracle": "^10.11"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
-        "laravel/pint": "^1.0",
         "laravel/sail": "^1.18",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^7.0",
