--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,8 @@
         "spatie/laravel-permission": "^6.3",
         "spatie/laravel-query-builder": "^5.7",
         "spatie/schema-org": "^3.23",
+        "yajra/laravel-datatables": "^10.0",
+        "yajra/laravel-datatables-html": "^10.12",
         "yajra/laravel-datatables-oracle": "^10.11"
     },
     "require-dev": {
