--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "league/flysystem-local": "^3.28",
         "proengsoft/laravel-jsvalidation": "^4.9",
         "razorpay/razorpay": "2.*",
+        "spatie/laravel-backup": "^9.1",
         "spatie/laravel-data": "^4.7",
         "spatie/laravel-medialibrary": "^10.15",
         "spatie/laravel-permission": "^6.3",
